modify responsive in the project

--- a/sections/_happyclient.scss
+++ b/sections/_happyclient.scss
@@ -13,7 +13,13 @@
       border-radius: 50%;
       object-fit: cover;
       width: 100px;
-      height: 90px;
+      height: 100px;
     }
+  }
+}
+
+@media (max-width: 400px) {
+  .happyclient .card .avatar {
+    height: 75px;
   }
 }
