--- a/sections/_header.scss
+++ b/sections/_header.scss
@@ -111,6 +111,9 @@
   .navbar-dark .navbar-nav .nav-link.active {
     border-color: transparent;
   }
+  .navbar-expand-lg > .container {
+    padding: 0 10px;
+  }
 }
 
 @media (max-width: 762px) {
@@ -118,12 +121,21 @@
     font-size: 40px;
   }
   .header .carousel-item__head {
-    font-size: 70px;
+    font-size: 50px;
   }
   .header .carousel-inner {
-    height: 480px;
+    height: 400px;
   }
   .header .carousel-item {
     top: 30px;
+  }
+  .header .carousel-indicators li .inner .number {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .header .carousel .carousel-indicators {
+    bottom: 50px;
   }
 }
