happyClient img modifiy

--- a/sections/_happyclient.scss
+++ b/sections/_happyclient.scss
@@ -20,6 +20,12 @@
 
 @media (max-width: 400px) {
   .happyclient .card .avatar {
-    height: 75px;
+    height: 91px;
+  }
+}
+
+@media (max-width: 350px) {
+  .happyclient .card .avatar {
+    height: 70px;
   }
 }
